# rust-learning

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile.debian  docker-compose.yml
.devcontainer/trixie-slim/: devcontainer.json
get-dependencies/: .gitmodules  Cargo.toml
src/rustlings/: Cargo.toml
src/rustlings/dev/: Cargo.toml
src/rustlings/rustlings-macros/: Cargo.toml
